syntax = "proto3";

package washup.protos.internal;

option java_package = "com.washup.protos";

import "shared.proto";

message WashEmployeeLoginRequest {
  string email = 1;
  string password = 2;
}

message WashEmployeeLoginResponse {
}

message OrderInternal {
  string token = 1;
  shared.OrderType order_type = 2;
  string user_token = 3;
  shared.OrderStatus status = 4;
  uint64 pickup_date = 5;
  uint64 delivery_date = 6;
  uint64 billed_at = 7;
  bool rush_service = 8;
  int64 total_cost_cents = 9;
  uint64 created_at = 10;
  uint64 updated_at = 11;
}

message GetOrdersRequestInternal {
  // both dates are inclusive [start_date, end_date]
  uint64 start_date = 1;
  uint64 end_date = 2;
  shared.OrderType order_type = 3;
  shared.OrderStatus order_status = 4;
  bool billed = 5;
}

message GetOrderResponseInternal {
  repeated OrderInternal orders = 1;
}