syntax = "proto3";

package washup.protos.shared;

option java_package = "com.washup.protos";

enum OrderType {
  TYPE_UNKNOWN = 0;
  WASH_FOLD = 1;
  DRY_CLEAN = 2;
}

enum OrderStatus {
  STATUS_UNKNOWN = 0;
  PENDING = 1;
  PICKED_UP = 2;
  DROPPED_OFF = 3;
  BILLED = 4;
}